# package_publishing

./: README.md  pyproject.toml
package_publishing/: __init__.py  module1.py  module2.py
tests/: __init__.py  test_module1.py
